# T2GateWayServer

./: CMakeLists.txt  LICENSE  README.md
config/: T2GateWayServer.conf  T2GateWayServer.config.conf
src/: Api.cpp  Api.h  ApiCallback.cpp  ApiCallback.h  ApiHelper.cpp  ApiHelper.h  ApiMgr.cpp  ApiMgr.h  CMakeLists.txt  ConfigMgr.cpp  ConfigMgr.h  Public.h  RequestMgr.cpp  RequestMgr.h  ResponseMgr.cpp  ResponseMgr.h  T2GateWayServer.cpp  T2GateWayServer.h  T2TarsObj.h  T2TarsObj.tars  T2TarsObjImp.cpp  T2TarsObjImp.h  concurrentqueue.h
src/t2sdk/include/: t2sdk_interface.h
